--- a/source/style.scss
+++ b/source/style.scss
@@ -52,6 +52,10 @@ body {
           }
       }
     }
+    .bars{
+      display: none
+     
+    }
   }
   .intro {
     @extend .container;
@@ -123,3 +127,67 @@ body {
      }   }
 }
 
+@media (max-width: 1000px) {
+    .hero header nav ul {
+          display: none;  
+        }
+        .hero header nav button{
+          display: none;
+        }
+     .intro {
+       flex-direction: column;
+       text-align: center;
+   
+       .intro-text {
+         h2 {
+           font-size: 36px;
+         }
+       }
+   
+       .intro-img {
+         img {
+           max-width: 100%;
+           height: auto;
+           margin-top: 20px;
+         }
+       }
+     }
+   
+    
+    .hero header .bars{
+          display: block;
+          color: #fff;
+     }
+   } 
+
+   @media (max-width: 768px) {
+     .work {
+       flex-direction: column;
+   
+       .left {
+         width: 100%;
+         margin: 0 0 30px 0;
+         text-align: center;
+       }
+   
+       .box-parent {
+         grid-template-columns: 1fr;
+         justify-items: center;
+   
+         .box {
+           width: 90%;
+         }
+       }
+     }
+   }
+//    .container {
+//      max-width: 1200px;
+//      padding: 0 15px;
+//      margin: 0 auto;
+//    }
+//    img {
+//      max-width: 100%;
+//      height: auto;
+//    }
+  
+            
