--- a/source/style.scss
+++ b/source/style.scss
@@ -11,6 +11,7 @@ body {
   color: $secondry-color;
   width: 100%;
   height: 100vh;
+  margin-bottom: 30px;
   header {
     @extend .container;
     @include dFlex();
@@ -77,6 +78,8 @@ body {
       }
       .btns {
         margin-top: 20px;
+        margin-bottom: 20px;
+        
         font-weight: bold;
         i{
           margin-left: 10px;
@@ -89,6 +92,7 @@ body {
         .yellow {
           background-color: $yellow;
           color: $dark;
+          
         }
         .yellow:hover{
           background-color: $primary-color;
@@ -161,6 +165,9 @@ body {
    } 
 
    @media (max-width: 768px) {
+    .intro-img{
+      display: none;
+    }
      .work {
        flex-direction: column;
    
@@ -177,17 +184,10 @@ body {
          .box {
            width: 90%;
          }
+
        }
      }
    }
-//    .container {
-//      max-width: 1200px;
-//      padding: 0 15px;
-//      margin: 0 auto;
-//    }
-//    img {
-//      max-width: 100%;
-//      height: auto;
-//    }
+
   
             
